--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </li>
             </ul>
         </nav>
-            <address>
+            <address class="address-info">
                 <ul>
                     <li> 
                         <a href="mailto:info@devstudio.com" class="address-style">info@devstudio.com</a>
@@ -82,7 +82,7 @@
         </ul>
         </section>
 
-        <section>
+        <section class="team-color">
             <h2 class="team-head">Our Team</h2>
             
             <ul>
